[tool.poetry]
name = "netbox"
version = "2.9.10"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "==3.1"
django-cacheops = "==5.1.0"
django-cors-headers = "==3.4.0"
django-debug-toolbar = "==2.2"
django-filter = "==2.3.0"
django-mptt = "==0.11.0"
django-pglocks = "==1.0.4"
django-prometheus = "==2.0.0"
django-rq = "==2.3.2"
django-tables2 = "==2.3.1"
django-taggit = "==1.3.0"
django-timezone-field = "==4.0"
djangorestframework = "==3.11.0"
drf-yasg = {version = "==1.17.1", extras = ["validation"]}
Jinja2 = "==2.11.2"
Markdown = "==3.2.2"
netaddr = "==0.8.0"
Pillow = "==7.2.0"
psycopg2-binary = "==2.8.5"
PyYAML = "==5.3.1"
svgwrite = "==1.4"
gunicorn = "==20.0.4"
pycryptodome = "==3.9.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
